# curl

./: .gitignore  BUILD.bazel  MODULE.bazel  config.bzl
lib/: doh.c
lib/vtls/: mbedtls.c
